syntax="proto3";
option java_package = "com.github.entropyfeng.mydb.common.protobuf";
option java_outer_classname = "Turtle";

message ClientRequest {
    int64 requestId=1;
    int64 requestSequence=2;
}
enum Type {
    STRING=0;
    INTEGER=1;
    LONG=2;
    DOUBLE=3;
    BOOL=4;
    NUMBER_INTEGER=5;
    NUMBER_DECIMAL=6;
    //some--object
    TURTLE=50;
    COLLECTION=51;
    //special----
    OPERATION_NAME=100;


}
message PayLoad{


}
message ClientResponse{
    int64 responseId=1;
    int64 responseSequence=2;

}